Closed Bug 509947 Opened 15 years ago Closed 15 years ago

various 64-bit fixes for Mac OS X in plugin and widget code

Categories

(Core :: General, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

References

Details

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
This patch includes various 64-bit fixes for our plugin and widget code.
Attachment #394019 - Flags: review?(mstange)
Note to reviewers - this can't be tested in a 64-bit build without a big patch queue which I have not published because it is not ready. Please review for 32-bit correctness, you'll pretty much have to trust me that this works well enough in a 64-bit build for now.
Attachment #394019 - Flags: review?(mstange) → review+
pushed to mozilla-central

http://hg.mozilla.org/mozilla-central/rev/b9985fb2557f
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Blocks: 468509
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: