Various 64-bit fixes for Mac OS X widget and plugin code. b=509947 r=mstange