modules/plugin/base/src/nsNPAPIPlugin.cpp
@@ -508,18 +508,24 @@ nsNPAPIPlugin::CreatePlugin(const char* aFilePath, PRLibrary* aLibrary,
 #endif
 
 #if defined(XP_MACOSX)
+#ifndef __LP64__
   short appRefNum = ::CurResFile();
   short pluginRefNum;
+#endif
 
   nsCOMPtr<nsILocalFile> pluginPath;
   NS_NewNativeLocalFile(nsDependentCString(aFilePath), PR_TRUE,
                         getter_AddRefs(pluginPath));
-
   nsPluginFile pluginFile(pluginPath);
+
+#ifndef __LP64__
   pluginRefNum = pluginFile.OpenPluginResource();
+#endif
 
   nsNPAPIPlugin* plugin = new nsNPAPIPlugin(nsnull, aLibrary, nsnull);
+#ifndef __LP64__
   ::UseResFile(appRefNum);
+#endif
   if (!plugin)
     return NS_ERROR_OUT_OF_MEMORY;
 
@@ -531,7 +537,9 @@ nsNPAPIPlugin::CreatePlugin(const char* aFilePath, PRLibrary* aLibrary,
     return NS_ERROR_FAILURE;
   }
 
+#ifndef __LP64__
   plugin->SetPluginRefNum(pluginRefNum);
+#endif
 #endif
 
 #ifdef XP_BEOS
@@ -2110,8 +2118,7 @@ _setvalue(NPP npp, NPPVariable variable, void *result)
 #ifdef XP_MACOSX
     case NPPVpluginDrawingModel: {
       if (inst) {
-        int dModelValue = (int)result;
-        inst->SetDrawingModel((NPDrawingModel)dModelValue);
+        inst->SetDrawingModel((NPDrawingModel)NS_PTR_TO_INT32(result));
         return NPERR_NO_ERROR;
       }
       else {
